# core-mx-liveliness-stake

./: .gitignore  Cargo.toml  coverage.sh  sc-config.toml
interaction/: devnet.snippets.sh
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: core_mx_liveliness_stake.scen.json
src/: admin.rs  config.rs  errors.rs  events.rs  lib.rs  liveliness_stake_proxy.rs  rewards.rs  storage.rs  views.rs
src/contexts/: base.rs  macros.rs
src/proxy_contracts/: life_bonding_sc_proxy.rs  mod.rs
test_external_contracts/: core-mx-life-bonding-sc.mxsc.json
tests/: unit_tests.rs  utils.rs
tests/contract_state/: contract_state.rs
tests/endpoints/: admin.rs  claim_rewards.rs  config.rs  mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
